[package]
name = "bookshop"
version = "0.1.0"
edition = "2018"
authors = ["Christoph <monochromec@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8.3"
crossbeam = "0.8.0"